force-app/main/default/objects/Geography__c/Geography__c.object-meta.xml
<CustomObject>
    <label>Geography</label>
    <pluralLabel>Geographies</pluralLabel>
    <nameField>
        <label>Geography Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>