force-app/main/default/objects/Geography__c/fields/City_Category__c.field-meta.xml
<CustomField>
    <fullName>City_Category__c</fullName>
    <label>City Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>