force-app/main/default/objects/Geography__c/fields/City_Tier__c.field-meta.xml
<CustomField>
    <fullName>City_Tier__c</fullName>
    <label>City Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>