force-app/main/default/objects/Geography__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <type>Text</type>
    <length>80</length>
</CustomField>