force-app/main/default/objects/Geography__c/fields/Geography_Type__c.field-meta.xml
<CustomField>
    <fullName>Geography_Type__c</fullName>
    <label>Geography Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Zone</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>Sub-District</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Area</fullName>
                </value>
                <value>
                    <fullName>Beat</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>