force-app/main/default/objects/Geography__c/fields/Parent_Geography__c.field-meta.xml
<CustomField>
    <fullName>Parent_Geography__c</fullName>
    <label>Parent Geography</label>
    <type>Lookup</type>
    <referenceTo>Geography__c</referenceTo>
    <relationshipLabel>Child Geographies</relationshipLabel>
    <relationshipName>Child_Geographies</relationshipName>
</CustomField>